# list_to_konsole-tabs

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  scratch.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: manual_tritgger.yml  python-publish-to-pypi.yml  ruff.yml
arg_parser/: arg_parser.py
file_handler/: file_handler.py
file_handler_dir/: file_handler.py
list_to_tabs/: main.py
list_to_tabs.egg-info/: PKG-INFO
raw_cmdln_entry/: cmdln_entry.py
src/: main.py
unit_tests/: test_arg_parsing.py  test_file_handling.py
