[metadata]
name = list_to_konsole-tabs
version = 0.0.1
author = Jack Sims
author_email = jack.sims@dillards.com
description = A package for creating konsole tabs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackpots28
project_urls =
Bug Tracker = https://github.com/jackpots28
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir = list_to_konsole-tabs
packages = find:
python_requires = >=3.8
install_requires =
   argparse